# qt-chess-cpp

./: BoardView.cpp  BoardView.h  CMakeLists.txt  CreateLobbyDialog.cpp  CreateLobbyDialog.h  Drawable.h  GameView.cpp  GameView.h  GameWidget.cpp  GameWidget.h  LobbyFinderWidget.cpp  LobbyFinderWidget.h  LobbyWidget.cpp  LobbyWidget.h  LoginWidget.cpp  LoginWidget.h  MainWidget.cpp  MainWidget.h  Piece.cpp  Piece.h  Session.h  Tile.h  main.cpp  test_ui.cpp  utility.h
src/board/: Board.cpp  Board.h  BoardTile.cpp  BoardTile.h
src/pieces/: Piece.cpp  Piece.h  Properties.h
